# MDSAPP

./: .env  .gitignore  CONTRIBUTING.md  GEMINI.md  README.md  adk_files.txt  create_mock_casefile.py  pyproject.toml  test_genai_blob_error.py
MDSAPP/: celery.py  main.py
MDSAPP/CasefileManagement/: context.md  manager.py
MDSAPP/CasefileManagement/api/: v1.py
MDSAPP/CasefileManagement/models/: casefile.py  research_result.py
MDSAPP/CommunicationsManagement/: context.md  manager.py
MDSAPP/CommunicationsManagement/agents/: api.py  chat_agent.py  context.md  engineer_agent.py  executor_agent.py  hq_orchestrator.py  processor_agent.py
MDSAPP/CommunicationsManagement/api/: v1.py
MDSAPP/CommunicationsManagement/prompts/: CHAT.json  ENGINEER.json  ENGINEER_RESEARCH.json  PROCESSOR.json
MDSAPP/HQGTOPOS/: README.md  api.py  context.md  manager.py
MDSAPP/SHOWCASE/: the plan.txt  trace.txt
MDSAPP/SHOWCASE/ADK reference guide ALL topics/: Agent Ops.txt  (+12 more)
MDSAPP/WorkFlowManagement/: context.md  manager.py
MDSAPP/agents/: api.py  chat_agent.py  context.md  engineer_agent.py  executor_agent.py  hq_orchestrator.py  processor_agent.py
MDSAPP/core/: context.md  dependencies.py  logging_config.py
MDSAPP/static/: index.html  script.js  settings.html  style.css
docs/architecture/: components.md  overview.md  vision.md
docs/development/: observability.md  resources.md  stack.md  updates.md
docs/project/: dependencies.md  installation.md  overview.md  running.md
scripts/: seed_prompts.py
tests/: test_casefile_manager.py  test_chat_agent.py  test_hq_flow.py
(+27 files in other folders)
